# swallowtail

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  effigy.toml
crates/swallowtail-adapter-bedrock/: Cargo.toml
crates/swallowtail-adapter-bedrock/src/: binding.rs  driver.rs  failure.rs  lib.rs  sdk.rs  sdk_config.rs  stream.rs
crates/swallowtail-adapter-bedrock/tests/: catalogue_sdk_fixtures.rs  conformance.rs  sdk_fixtures.rs
crates/swallowtail-adapter-codex/: Cargo.toml
crates/swallowtail-adapter-codex/src/: app_server.rs  callback_exchange.rs  discovery.rs  discovery_tests.rs  exec.rs  exec_events.rs  exec_events_tests.rs  exec_handle.rs  exec_input.rs  exec_pump.rs  exec_validation.rs  lib.rs  rpc.rs  selection.rs  selection_tests.rs  session.rs  session_access.rs  session_input.rs  session_open.rs  turn_state.rs
crates/swallowtail-adapter-codex/tests/: app_server.rs  app_server_lifecycle.rs  app_server_topology.rs  app_server_workspace.rs  compatibility_corpus.rs  dual_driver.rs  exec_deadline.rs  exec_run.rs  exec_validation.rs  installed_discovery.rs  legacy_app_server_corpus.rs  legacy_exec_corpus.rs  legacy_version_dispatch.rs  structured_run_parity.rs  version_range.rs
crates/swallowtail-adapter-deepseek/: Cargo.toml
crates/swallowtail-adapter-deepseek/src/: driver.rs  failure.rs  lib.rs  protocol.rs  selection.rs  transport.rs
crates/swallowtail-adapter-deepseek/tests/: conformance.rs  driver.rs
crates/swallowtail-adapter-gemini/: Cargo.toml
crates/swallowtail-adapter-gemini/src/: connection.rs  connection_dispatch.rs  connection_pump.rs  connection_response.rs  driver.rs  failure.rs  lib.rs  live.rs  live_protocol.rs  turn.rs  turn_tests.rs
crates/swallowtail-adapter-gemini/tests/: acp_driver.rs  installed_probe.rs  live_conformance.rs  live_failures.rs  live_success.rs
crates/swallowtail-adapter-kimi/: Cargo.toml
crates/swallowtail-adapter-kimi/src/: connection.rs  driver.rs  failure.rs  lib.rs  turn.rs
crates/swallowtail-adapter-kimi/tests/: acp_driver.rs  installed_probe.rs
crates/swallowtail-adapter-ollama/: Cargo.toml
crates/swallowtail-adapter-ollama/src/: driver.rs  failure.rs  lib.rs  selection.rs  transport.rs
crates/swallowtail-adapter-ollama/tests/: attached_driver.rs  conformance.rs  installed_probe.rs
crates/swallowtail-adapter-openai/: Cargo.toml
crates/swallowtail-adapter-openai/src/: driver.rs  failure.rs  lib.rs  protocol.rs  realtime.rs  realtime_protocol.rs  transport.rs
crates/swallowtail-adapter-openai/tests/: conformance.rs  direct_driver.rs  protocol_fixtures.rs  realtime_driver.rs  realtime_failures.rs  realtime_success.rs
crates/swallowtail-adapter-pi/: Cargo.toml
crates/swallowtail-adapter-pi/src/: callback.rs  connection.rs  driver.rs  failure.rs  lib.rs  protocol.rs  turn.rs
crates/swallowtail-adapter-pi/tests/: driver.rs
crates/swallowtail-adapter-qwen/: Cargo.toml
crates/swallowtail-adapter-qwen/src/: command.rs  driver.rs  events.rs  handle.rs  lib.rs  pump.rs  validation.rs
crates/swallowtail-adapter-qwen/tests/: conformance.rs  driver.rs  protocol_fixtures.rs
crates/swallowtail-adapter-xai/: Cargo.toml
crates/swallowtail-adapter-xai/src/: driver.rs  failure.rs  lib.rs  protocol.rs  transport.rs
crates/swallowtail-adapter-xai/tests/: conformance.rs  direct_driver.rs  protocol_fixtures.rs
crates/swallowtail-host-local/: Cargo.toml
crates/swallowtail-host-local/src/: attachment.rs  child.rs  credential.rs  deadline.rs  host.rs  hosted.rs  lib.rs  limits.rs  materialization.rs  model_artifact.rs  network.rs  output.rs  process_exit.rs  process_reader.rs  schema.rs  serving_endpoint.rs  working_resource.rs  working_resource_io.rs
crates/swallowtail-host-local/tests/: hosted_services.rs  local_process.rs  local_services.rs  owned_serving_services.rs  working_resource_io.rs
crates/swallowtail-protocol-acp/: Cargo.toml
crates/swallowtail-protocol-acp/src/: lib.rs  tests.rs
crates/swallowtail-protocol-acp/tests/: cross_agent_transport.rs  kimi_protocol_fixtures.rs  protocol_fixtures.rs
crates/swallowtail-protocol-openai-chat/: Cargo.toml
crates/swallowtail-protocol-openai-chat/src/: error.rs  json.rs  lib.rs  request.rs  sse.rs  tests.rs
crates/swallowtail-protocol-openai-chat/tests/: cross_corpus.rs  kimi_k3_fixtures.rs
crates/swallowtail-runtime/: Cargo.toml
crates/swallowtail-runtime/src/: async_types.rs  attachment.rs  callback.rs  cancellation.rs  content.rs  direct_continuation.rs  event.rs  event_buffer.rs  event_channel.rs  failure.rs  handles.rs  harness_rpc.rs  host_reference.rs  host_registry.rs  host_traits.rs  identity.rs  input.rs  installed_executable.rs  installed_executable_tests.rs  lib.rs  model_artifact.rs  network.rs  operation_policy.rs  outcome.rs  planned_connection_rollover.rs  process_input.rs  process_io.rs  provider_observation.rs  realtime_media.rs  registration.rs  roles.rs  schema.rs  secret.rs  serving_endpoint.rs  serving_lifecycle.rs  session_access.rs  session_binding.rs  session_options.rs  session_provider_state.rs  session_replay.rs  (+2 more)
crates/swallowtail-testkit/: Cargo.toml
crates/swallowtail-testkit/src/: assertions.rs  callback_fixture.rs  direct_continuation_fixture.rs  fixture.rs  installed_executable_assertions.rs  interface_compatibility_assertions.rs  lib.rs  managed_harness_fixture.rs  preflight_assertions.rs  preflight_fixture.rs  profile_acp.rs  profile_attached.rs  profile_attached_runtime.rs  profile_common.rs  profile_direct_session.rs  profile_fixture.rs  profile_harness_configuration.rs  profile_harness_native.rs  profile_harness_rpc_contract.rs  profile_hosted.rs  profile_local_continuation.rs  profile_managed_harness.rs  profile_managed_harness_shape.rs  profile_network_harness.rs  profile_one_shot.rs  profile_owned.rs  profile_persistent_acp.rs  profile_persistent_acp_shape.rs  profile_provider_conversation.rs  profile_realtime_media.rs  profile_realtime_media_shape.rs  profile_realtime_rollover.rs  profile_rpc.rs  profile_session_access.rs  profile_shape.rs  profiles.rs  recording_host.rs  (+5 more)
(+1062 files in other folders)
