[workspace]
members = [
  "crates/swallowtail-adapter-alibaba-model-studio",
  "crates/swallowtail-adapter-anthropic",
  "crates/swallowtail-adapter-bedrock",
  "crates/swallowtail-adapter-codex",
  "crates/swallowtail-adapter-gemini",
  "crates/swallowtail-adapter-kimi",
  "crates/swallowtail-adapter-kimi-platform",
  "crates/swallowtail-adapter-llama-cpp",
  "crates/swallowtail-adapter-opencode",
  "crates/swallowtail-adapter-openai",
  "crates/swallowtail-adapter-qwen",
  "crates/swallowtail-adapter-xai",
  "crates/swallowtail-core",
  "crates/swallowtail-host-local",
  "crates/swallowtail-protocol-acp",
  "crates/swallowtail-protocol-openai-chat",
  "crates/swallowtail-runtime",
  "crates/swallowtail-testkit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/inflatable-cookie/swallowtail"

[workspace.lints.rust]
unsafe_code = "forbid"
