[package]
name = "swallowtail-adapter-deepseek"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DeepSeek direct-inference adapter for Swallowtail"

[dependencies]
curl = "0.4.50"
futures-channel = "0.3"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swallowtail-core = { path = "../swallowtail-core" }
swallowtail-protocol-openai-chat = { path = "../swallowtail-protocol-openai-chat" }
swallowtail-runtime = { path = "../swallowtail-runtime" }
url = "2"

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
swallowtail-host-local = { path = "../swallowtail-host-local" }
swallowtail-testkit = { path = "../swallowtail-testkit" }

[lints]
workspace = true
