[package]
name = "swallowtail-adapter-gemini"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Gemini harness drivers for Swallowtail"

[dependencies]
base64 = "0.22"
futures-channel = "0.3"
futures-core = "0.3"
serde_json = "1"
swallowtail-core = { path = "../swallowtail-core" }
swallowtail-protocol-acp = { path = "../swallowtail-protocol-acp" }
swallowtail-runtime = { path = "../swallowtail-runtime" }
tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }
url = "2"
zeroize = "1"

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
swallowtail-host-local = { path = "../swallowtail-host-local" }
swallowtail-testkit = { path = "../swallowtail-testkit" }

[lints]
workspace = true
