[package]
name = "swallowtail-adapter-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAI public-API drivers for Swallowtail"

[dependencies]
base64 = "0.22"
curl = "0.4.50"
futures-channel = "0.3"
futures-core = "0.3"
serde_json = "1"
swallowtail-core = { path = "../swallowtail-core" }
swallowtail-runtime = { path = "../swallowtail-runtime" }
url = "2"
zeroize = "1"
tungstenite = { version = "0.30", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
futures-executor = "0.3"
futures-util = "0.3"
swallowtail-host-local = { path = "../swallowtail-host-local" }
swallowtail-testkit = { path = "../swallowtail-testkit" }

[lints]
workspace = true
