[package]
name = "swallowtail-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Executor-neutral runtime contracts for Swallowtail drivers and hosts"

[dependencies]
futures-core = "0.3"
swallowtail-core = { path = "../swallowtail-core" }

[lints]
workspace = true
